objects/Project_Survey_Response__c.object
<CustomObject>
    <description>Captures customer responses for the survey sent for project completion.</description>
    <fields>
        <fullName>Ability_to_present_material_clearly__c</fullName>
        <description>Trainer ability to present material clearly/communicate clearly</description>
        <inlineHelpText>Trainer ability to present material clearly</inlineHelpText>
        <label>Ability to communicate clearly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Survey Responses</relationshipLabel>
        <relationshipName>Project_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>Do you have any other comments, questions or concerns?</description>
        <inlineHelpText>Do you have any other comments, questions or concerns?</inlineHelpText>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Balance_was_approrpiate__c</fullName>
        <description>The balance between the lecture and the workshops was appropriate</description>
        <inlineHelpText>The balance between the lecture and the workshops was appropriate</inlineHelpText>
        <label>Balance was approrpiate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comfortable_approaching__c</fullName>
        <description>I felt comfortable approaching the consultant with questions or concerns</description>
        <inlineHelpText>I felt comfortable approaching the consultant with questions or concerns</inlineHelpText>
        <label>Comfortable approaching</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date_Time__c</fullName>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Survey Responses</relationshipLabel>
        <relationshipName>Project_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_description__c</fullName>
        <inlineHelpText>Optional field</inlineHelpText>
        <label>Event description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Comments__c</fullName>
        <label>Final Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <displayFormat>S{00000}</displayFormat>
        <label>Identifier</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Knowledge_and_expertise__c</fullName>
        <description>Knowledge and expertise of the trainer</description>
        <inlineHelpText>Knowledge and expertise of the trainer</inlineHelpText>
        <label>Knowledge and expertise</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_of_training__c</fullName>
        <description>Length of training for the topics presented
Length of consulting was appropriate for the required tasks</description>
        <inlineHelpText>Length of training for the topics presented
Length of consulting was appropriate for the required tasks</inlineHelpText>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Likely_to_recommend__c</fullName>
        <description>Think about your Imagine Communications training experience.  How likely would you be to recommend Imagine Communications to others?</description>
        <inlineHelpText>Think about your Imagine Communications training experience.  How likely would you be to recommend Imagine Communications to others?</inlineHelpText>
        <label>Likely to recommend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM_Project_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Resource</label>
        <referenceTo>MPM_Project_Resource__c</referenceTo>
        <relationshipLabel>Project Survey Responses</relationshipLabel>
        <relationshipName>Project_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_was_presented_in_a_logical_flow__c</fullName>
        <description>The material was presented in a logical flow for my learning experience</description>
        <inlineHelpText>The material was presented in a logical flow for my learning experience</inlineHelpText>
        <label>Material was presented in a logical flow</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Met_my_learning_objectives__c</fullName>
        <description>The class met my learning objectives</description>
        <inlineHelpText>The class met my learning objectives</inlineHelpText>
        <label>Met my learning objectives</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_consultants_worked_well__c</fullName>
        <description>When multiple IC consultants were involved, they worked well together</description>
        <inlineHelpText>When multiple IC consultants were involved, they worked well together</inlineHelpText>
        <label>Multiple consultants worked well</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Project2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Project Survey Responses</relationshipLabel>
        <relationshipName>Project_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Quality__c</fullName>
        <description>Overall quality of the training</description>
        <inlineHelpText>Overall quality of the training</inlineHelpText>
        <label>Overall quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prepared_for_the_assignment__c</fullName>
        <label>Prepared for the assignment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Presented_at_level_for_my_comprehension__c</fullName>
        <description>Class content was presented at a level for my comprehension</description>
        <inlineHelpText>Class content was presented at a level for my comprehension</inlineHelpText>
        <label>Presented at level for my comprehension</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professionalism_and_courtesy__c</fullName>
        <description>Professionalism and courtesy of the trainer</description>
        <inlineHelpText>Professionalism and courtesy of the trainer</inlineHelpText>
        <label>Professionalism and courtesy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Project Survey Responses</relationshipLabel>
        <relationshipName>Project_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Questions_or_Concerns__c</fullName>
        <description>Do you have any questions regarding any of the topics reviewed in this session?
Do you have any questions or concerns that are still unanswered?</description>
        <inlineHelpText>Do you have any questions regarding any of the topics reviewed in this session?
Do you have any questions or concerns that are still unanswered?</inlineHelpText>
        <label>Questions or Concerns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Readily_available__c</fullName>
        <description>The consultant was readily available</description>
        <inlineHelpText>The consultant was readily available</inlineHelpText>
        <label>Readily available</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resource_Name__c</fullName>
        <formula>MPM_Project_Resource__r.Resource__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsive_and_thorough__c</fullName>
        <label>Responsive and thorough</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Review_was_effective__c</fullName>
        <description>The review questions/quizzes were an effective tool for helping me learn</description>
        <inlineHelpText>The review questions/quizzes were an effective tool for helping me learn</inlineHelpText>
        <label>Review was effective</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_link__c</fullName>
        <description>link to the full survey result</description>
        <inlineHelpText>link to the full survey result</inlineHelpText>
        <label>Survey link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Trainee_Email__c</fullName>
        <label>Trainee Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainee_Name__c</fullName>
        <description>Name of the trainee responding to the survey</description>
        <label>Trainee Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional field</inlineHelpText>
        <label>Trainer/Consultant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>notContain</operation>
                <value>Customer Community Profile, Customer Community User, Customer Manager User, Customer Manager User Parent, Customer Self-Registration User, Customers Profile, Customer User, Partner Community Profile, Partner Community User, Partners Profile, Partner</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Survey_Responses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Survey Response</label>
    <nameField>
        <displayFormat>PRJ-{0}</displayFormat>
        <label>Project Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Survey Responses</pluralLabel>
    <recordTypes>
        <fullName>Consulting_Survey</fullName>
        <active>true</active>
        <description>ID 01231000000y2jR</description>
        <label>Consulting</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Project_Survey</fullName>
        <active>true</active>
        <label>General Project Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_Survey</fullName>
        <active>true</active>
        <description>ID 01231000000y2T9</description>
        <label>Training</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>